Update dev_env